fix: col priority search input and button alignment

--- a/www/style.css
+++ b/www/style.css
@@ -191,6 +191,29 @@
   min-width: 0;
 }
 
+/* DATA TABLE IN COL PRIORITY STYLES */
+#priority-container .dataTables_wrapper .dataTables_filter {
+  float: left;
+  text-align: left;
+  width: 100%;
+  min-width: 60px;
+  margin-bottom: 10px;
+}
+
+#priority-container .dataTables_filter label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 0;
+}
+
+#priority-container .dataTables_filter input {
+  flex: 1;
+  max-width: 400px;
+  min-width: 60px;
+  margin-left: 0px !important;
+}
+
 #set-priority-card .html-fill-container,
 #upload-card .html-fill-container {
   padding: 16px 25px;
@@ -292,7 +315,14 @@
   margin: 30px 0 20px 0;
 }
 
+/* Ensure table rows are not triggering search */
+#sample_manual_table tbody tr {
+  pointer-events: auto;
+}
 
+#sample_manual_table tbody td {
+  cursor: default;
+}
 
 /* FUNDING AND EXPENSE PAGES */
 
